==> MikroElektronika/mikrosdk_v2/targets/pic_32bit/mikroe/pic32/src/dma/implementation_1/hal_ll_dma.c <==
#include "hal_ll_dma.h"
#define HAL_LL_DMA_BASE_ADDRESS                (0xBF883000)
#define HAL_LL_DMA_BASE_ADDRESS                (0xBF811000)
#define HAL_LL_DMA_STREAM_BASE_OFFSET          (0x60)
#define HAL_LL_DMA_STREAM_STREAM_OFFSET        (0xC0)
#define HAL_LL_DMA_STREAM_BASE_ADDRESS         (HAL_LL_DMA_BASE_ADDRESS + HAL_LL_DMA_STREAM_BASE_OFFSET)
#define HAL_LL_DMA_CON_SUSPEND_POSITION        (12)
#define HAL_LL_DMA_CON_SUSPEND_MASK            (0x1UL << HAL_LL_DMA_CON_SUSPEND_POSITION)
#define HAL_LL_DMA_CON_SUSPEND                 HAL_LL_DMA_CON_SUSPEND_MASK
#define HAL_LL_DMA_CON_ON_POSITION             (15)
#define HAL_LL_DMA_CON_ON_MASK                 (0x1UL << HAL_LL_DMA_CON_ON_POSITION)
#define HAL_LL_DMA_CON_ON                      HAL_LL_DMA_CON_ON_MASK
#define HAL_LL_DMA_DCHCON_CHPRI_POSITION       (0)
#define HAL_LL_DMA_DCHCON_CHPRI_MASK           (0x3UL << HAL_LL_DMA_DCHCON_CHPRI_POSITION)
#define HAL_LL_DMA_DCHCON_CHPRI_PRIORITY_0     (0)
#define HAL_LL_DMA_DCHCON_CHPRI_PRIORITY_1     (0x1UL << HAL_LL_DMA_DCHCON_CHPRI_POSITION)
#define HAL_LL_DMA_DCHCON_CHPRI_PRIORITY_2     (0x2UL << HAL_LL_DMA_DCHCON_CHPRI_POSITION)
#define HAL_LL_DMA_DCHCON_CHPRI_PRIORITY_3     (0x3UL << HAL_LL_DMA_DCHCON_CHPRI_POSITION)
#define HAL_LL_DMA_DCHCON_CHEDET_POSITION      (2)
#define HAL_LL_DMA_DCHCON_CHEDET_MASK          (0x1UL << HAL_LL_DMA_DCHCON_CHEDET_POSITION)
#define HAL_LL_DMA_DCHCON_CHEDET               HAL_LL_DMA_DCHCON_CHEDET_MASK

hal_ll_err_t hal_ll_dma_deinit( hal_ll_dma_t *obj ) {
    uint8_t index = 0;
    hal_ll_dma_stream_handle_t * dma_stream;

    // Check if the DMA stream is enabled
    while (index < DMA_NUM_OF_STREAMS) {
        dma_stream = ( hal_ll_dma_stream_handle_t * )hal_ll_dma_get_stream_address( index );
        if ( HAL_LL_DMA_DCHCON_CHEN & dma_stream->con ) {
            // If an enabled stream was found, exit.
            return HAL_LL_DMA_SUCCESS;
        }
        ++index;
    }

    // If no stream is enabled, disable the DMA module.
    HAL_LL_DMA_MODULE_DISABLE( ( ( dma_handle_t * )HAL_LL_DMA_BASE_ADDRESS ) );

    return HAL_LL_DMA_SUCCESS;
}

hal_ll_err_t hal_ll_dma_set_parameters( hal_ll_dma_t *obj, uint32_t addr_src, uint32_t addr_dst, size_t transfer_size, hal_ll_dma_source_memory_region_t src_mem_type ) {
    hal_ll_dma_stream_handle_t *dma_stream = ( hal_ll_dma_stream_handle_t * )obj->handle;
    hal_ll_dma_config_t cfg = obj->config;

    // Ignore src_mem_type. Only relevant on PIC18
    ( void )src_mem_type;

    // Check if the transfer size is valid.
    if ( HAL_LL_DMA_TRANSFER_SIZE_ILLEGAL ) {
        // Transfer size cannot be greater than 65535.
        return HAL_LL_DMA_ERROR;
    }

    HAL_LL_DMA_STREAM_DISABLE( dma_stream );

    // Configure DMA source address.
    dma_stream->ssa = VIRTUAL_TO_PHYSICAL( addr_src );
    // Configure DMA destination address.
    dma_stream->dsa = VIRTUAL_TO_PHYSICAL( addr_dst );

    // Configure source and destination sizes, depending on direction.
    switch ( cfg.direction ) {
        case HAL_LL_DMA_DIRECTION_MEMORY_TO_MEMORY:
            dma_stream->ssiz = cfg.transfer_length;
            dma_stream->dsiz = cfg.transfer_length;
            dma_stream->csiz = cfg.transfer_length;
            break;
        case HAL_LL_DMA_DIRECTION_MEMORY_TO_PERIPH:
            dma_stream->ssiz = cfg.transfer_length;
            dma_stream->dsiz = 1;
            dma_stream->csiz = 1;
            break;
        case HAL_LL_DMA_DIRECTION_PERIPH_TO_MEMORY:
            dma_stream->ssiz = 1;
            dma_stream->dsiz = cfg.transfer_length;
            dma_stream->csiz = 1;
            break;
        case HAL_LL_DMA_DIRECTION_PERIPH_TO_PERIPH:
            dma_stream->ssiz = 1;
            dma_stream->dsiz = 1;
            dma_stream->csiz = 1;
            break;

        default:
           return HAL_LL_DMA_ERROR;
    }

    return HAL_LL_DMA_SUCCESS;
}

hal_ll_err_t hal_ll_dma_transfer_start( hal_ll_dma_t *obj ) {
    hal_ll_dma_stream_handle_t *dma_stream = ( hal_ll_dma_stream_handle_t * )obj->handle;
    uint8_t tmp = 0;

    // Enable the module is enough for transfer to start if triggered by hardware.
    HAL_LL_DMA_STREAM_ENABLE( dma_stream );

    // If using memory to memory direction, transfer needs to be forced.
    if ( HAL_LL_DMA_DIRECTION_MEMORY_TO_MEMORY == obj->config.direction ) {
        dma_stream->econset = HAL_LL_DMA_DCHECON_CFORCE;
    }

    return HAL_LL_DMA_SUCCESS;
}

hal_ll_err_t hal_ll_dma_transfer_stop( hal_ll_dma_t *obj ) {
    hal_ll_dma_stream_handle_t * dma_stream = ( hal_ll_dma_stream_handle_t * )obj->handle;
    uint32_t transfer_complete_flag = ( HAL_LL_DMA_DIRECTION_PERIPH_TO_MEMORY == obj->config.direction ? \
                                        HAL_LL_DMA_DCHINT_CHDDIF : HAL_LL_DMA_DCHINT_CHSDIF );

    // No point in stopping circular mode transfer.
    if ( HAL_LL_DMA_MODE_CIRCULAR == obj->config.mode ) {
        return HAL_LL_DMA_ERROR;
    }

    // Wait until the transfer has been completed.
    while ( HAL_LL_DMA_TRANSFER_DONE != ( dma_stream->intcr & transfer_complete_flag ) );
    // The stream is automatically disabled by hardware by clearing CHEN bit (DCHxCON<7>) when the transfer completes.

    // TODO consider removing anything below as it is redundant.
    /* Note: Individual channels may be suspended using the CHEN bit (DCHxCON<7>). If a DMA transfer
     *       is in progress and the CHEN bit is cleared, the current transaction will be completed and further
     *       transactions on the channel will be suspended.
     */
    // TODO This is redundant, as when the transfer is finished, CHEN bit is cleared by hardware. It would be useful for pausing instead.
    HAL_LL_DMA_STREAM_DISABLE( dma_stream );

    /* Note: Depending on the device, when the channel is suspended by clearing the CHEN bit, the user
     *       application should poll the CHBUSY bit (DCHxCON<15>) to determine when the channel is
     *       completely suspended following completion of the current transaction
     */
    #ifdef HAL_LL_DMA_DCHCON_CHBUSY_AVAILABLE
    // TODO This is redundant, as when the transfer is finished, CHEN bit is cleared by hardware. It would be useful for pausing instead.
    while ( HAL_LL_DMA_DCHCON_CHBUSY & dma_stream->con );
    #endif

    return HAL_LL_DMA_SUCCESS;
}

static inline uint32_t hal_ll_dma_get_stream_address( uint8_t stream ) {
    return ((hal_ll_base_addr_t)HAL_LL_DMA_STREAM_BASE_ADDRESS + (hal_ll_base_addr_t)(HAL_LL_DMA_STREAM_STREAM_OFFSET * stream));
}

static hal_ll_err_t hal_ll_dma_init_hw( hal_ll_dma_t *obj, hal_ll_dma_stream_handle_t *dma_stream, hal_ll_dma_config_t config ) {
    dma_handle_t * dma = ( dma_handle_t * )HAL_LL_DMA_BASE_ADDRESS;
    volatile uint32_t con_tmp = 0UL;
    volatile uint32_t econ_tmp = 0UL;

    /* Note: Every time we open some DMA, it should be confirmed that DMA module is on because this function
     *       will mostly focus on configuring DMA channel and not the module itself. and for the channel to function,
     *       module needs to be enabled.
     *       The DMA module should only be disabled if all of its channels are disabled.
     */
    /* Note: For clarification, in our driver, the functionality performed by PIC32 channel is called stream,
     *       and events that can trigger transmissions are called channels.
     */

    // Enable DMA module.
    HAL_LL_DMA_MODULE_ENABLE( dma );

    // Disable the DMA stream.
    HAL_LL_DMA_STREAM_DISABLE( dma_stream );

    // BEGIN Prepare the DMA Stream configuration.
    // Clear CHPRI, CHAEN, CHCHN, CHAED, and CHCHNS bits.
    dma_stream->conclr = ( HAL_LL_DMA_DCHCON_CHPRI_MASK | HAL_LL_DMA_DCHCON_CHAEN_MASK | \
                           HAL_LL_DMA_DCHCON_CHCHN_MASK | HAL_LL_DMA_DCHCON_CHAED_MASK | \
                           HAL_LL_DMA_DCHCON_CHCHNS_MASK );
    // Get the DCHxCON register value.
    con_tmp = dma_stream->con;
    // Clear AIRQEN, SIRQEN, PATEN, and CHSIRQ bits.
    dma_stream->econclr = ( HAL_LL_DMA_DCHECON_AIRQEN_MASK | HAL_LL_DMA_DCHECON_SIRQEN_MASK | \
                            HAL_LL_DMA_DCHECON_PATEN_MASK  | HAL_LL_DMA_DCHECON_CHSIRQ_MASK );
    // Get the DCHxECON register value.
    econ_tmp = dma_stream->econ;

    // Select the desired stream channel.
    econ_tmp |= hal_ll_dma_get_reg_value_channel( config.channel );

    // Set desired direction value.
    /* Note: PIC32 does not differentiate between memory and peripherals.
     *       Direction mode is still used to configure the rest of the stream properly.
     *       If the direction is anything but M2M and the mode is NORMAL, SIRQEN bit needs to be set.
     *       Additionally if mode CIRCULAR, then even in M2M direction SIRQEN needs to be set.
     */

    // There is only autoincrement mode. If end of the buffer is reached, pointers are reloaded.
    if ( ( false == config.src_inc ) || ( false == config.dst_inc ) ) {
        return HAL_LL_DMA_ERROR;
    }

    // Note: Data Alignment and Burst Transfer settings are not relevant on PIC32.

    // Set desired mode.
    /* Note: PIC32 does not differentiate between memory and peripherals.
     *       config.direction is still used to configure the rest of the stream properly.
     *       If the direction is anything but M2M and the mode is NORMAL, SIRQEN bit needs to be set.
     *       Additionally if mode CIRCULAR, then even in M2M direction SIRQEN needs to be set.
     */
     /* Note: PIC32 does not have circular mode, but config.mode is still used to
      *       configure the stream to functionally behave like it is in CIRCULAR mode.
      *       To achieve it SIRQEN and CHAEN bits need to be set as well as the CHSIRQ bitfield
      */
    if ( HAL_LL_DMA_DIRECTION_MEMORY_TO_MEMORY != config.direction ) {
        econ_tmp |= HAL_LL_DMA_DCHECON_SIRQEN;
    }
    if ( HAL_LL_DMA_MODE_CIRCULAR == obj->config.mode ) {
        con_tmp |= HAL_LL_DMA_DCHCON_CHAEN;
        econ_tmp |= HAL_LL_DMA_DCHECON_SIRQEN;
    }

    // Finally set the desired priority.
    con_tmp |= hal_ll_dma_get_reg_value_priority(config.priority);

    // And then write to DMA Stream CON and ECON register.
    dma_stream->conset = con_tmp;
    dma_stream->econset = econ_tmp;
    // END Prepare the DMA Stream configuration.

    return HAL_LL_DMA_SUCCESS;
}
