==> MikroElektronika/mikrosdk_v2/targets/arm/mikroe/nxp/src/dma/implementation_1/hal_ll_dma.c <==
#include "hal_ll_rcc.h"
#include "hal_ll_dma.h"
#include "hal_ll_gpio.h"
#define HAL_LL_DMAMUX_ENABLE_MASK (0x80U)
#define HAL_LL_DMA_ERQ_CLEAR_MASK (0x0000U)
#define HAL_LL_DMAMUX_CLEAR_MASK (0x00U)
#define HAL_LL_DMA_TCD_SOFF_NO_INCREMENT (0x0000U)
#define HAL_LL_DMA_TCD_SOFF_BYTE (0x0001U)
#define HAL_LL_DMA_TCD_SOFF_HALF_WORD (0x0002U)
#define HAL_LL_DMA_TCD_SOFF_WORD (0x0004U)
#define HAL_LL_DMA_TCD_DOFF_NO_INCREMENT (0x0000U)
#define HAL_LL_DMA_TCD_DOFF_BYTE (0x0001U)
#define HAL_LL_DMA_TCD_DOFF_HALF_WORD (0x0002U)
#define HAL_LL_DMA_TCD_DOFF_WORD (0x0004U)
#define HAL_LL_DMA_TCD_ATTR_SSIZE_BYTE (0x0000U)
#define HAL_LL_DMA_TCD_ATTR_SSIZE_HALF_WORD (0x0100U)
#define HAL_LL_DMA_TCD_ATTR_SSIZE_WORD (0x0200U)
#define HAL_LL_DMA_TCD_ATTR_DSIZE_BYTE (0x0000U)
#define HAL_LL_DMA_TCD_ATTR_DSIZE_HALF_WORD (0x0001U)
#define HAL_LL_DMA_TCD_ATTR_DSIZE_WORD (0x0002U)
#define HAL_LL_DMA_TCD_CSR_START_BIT (0)
#define HAL_LL_DMA_TCD_CSR_DREQ_BIT (3)
#define HAL_LL_DMA_TCD_CLEAR_MASK_BYTE (0x00)
#define HAL_LL_DMA_TCD_CLEAR_MASK_HALF_WORD (0x0000)
#define HAL_LL_DMA_TCD_CLEAR_MASK_WORD (0x00000000)
#define HAL_LL_DMA_BASE (0x40008000UL)
#define HAL_LL_DMA_CR_BASE ((uint32_t)HAL_LL_DMA_BASE)
#define HAL_LL_DMA_CHPRIO_BASE ((uint32_t)HAL_LL_DMA_BASE + 0x100UL)
#define HAL_LL_DMA_TCD_BASE ((uint32_t)HAL_LL_DMA_BASE + (uint32_t)0x1000UL)
#define HAL_LL_DMAMUX_BASE (0x40021000UL)
#define HAL_LL_SCR_BASE_OFFSET (0x10U)
#define HAL_LL_STREAM_BASE_OFFSET (0x18U)

hal_ll_err_t hal_ll_dma_deinit( hal_ll_dma_t *obj ) {
    // First abort current transfer.
    if ( HAL_LL_DMA_SUCCESS != hal_ll_dma_transfer_abort( obj ) )
        return HAL_LL_DMA_ERROR;
    // Finally, disable module clock.
    hal_ll_dma_clock_set( obj, false );
    // Enable current stream clock.
    hal_ll_dmamux_clock_set( obj, false );

    return HAL_LL_DMA_SUCCESS;
}

hal_ll_err_t hal_ll_dma_set_parameters( hal_ll_dma_t *obj, uint32_t addr_src, uint32_t addr_dst, size_t transfer_size, hal_ll_dma_source_memory_region_t src_mem_type ) {
    dma_handle_t *dma = (dma_handle_t *)obj->handle;
    dmamux_t * mux = (dmamux_t*)dmamux_controller[obj->module].dmamux_base + obj->stream;
    dma_tcd_t * tcd = (dma_tcd_t*)(obj->handle + ( HAL_LL_DMA_TCD_BASE_OFFSET + ( HAL_LL_DMA_TCD_REG_MULTIPLIER * obj->stream )));

    // Disable the peripheral first.
    HAL_LL_DMA_MODULE_DISABLE(dma, obj);

    // Minor loop byte count: how many bytes to transfer in each service request.
    tcd->nbytes = obj->config.data_align_destination + 1;

    // Number of major loops.
    tcd->biter = transfer_size / ( obj->config.data_align_destination + 1 );
    // Number of major loops.
    tcd->citer = transfer_size / ( obj->config.data_align_destination + 1 );

    // Set reset value for source and destination addresses.
    if (obj->config.mode == HAL_LL_DMA_MODE_CIRCULAR){
        tcd->slast = -transfer_size;
    } else {
        tcd->slast = 0;
    }

    tcd->dlast_sga = 0;

    // Set source and destination addresses.
    tcd->saddr = addr_src;
    tcd->daddr = addr_dst;

    return HAL_LL_DMA_SUCCESS;
}

hal_ll_err_t hal_ll_dma_transfer_start( hal_ll_dma_t *obj ) {
    dma_tcd_t * tcd = (dma_tcd_t*)( obj->handle + ( HAL_LL_DMA_TCD_BASE_OFFSET + ( HAL_LL_DMA_TCD_REG_MULTIPLIER * obj->stream )));

    // Start dma transfer
    HAL_LL_DMA_MODULE_ENABLE( ((dma_handle_t *)obj->handle), obj );
    // If normal mode, disable request once major loop is completed
    if ( HAL_LL_DMA_MODE_NORMAL == obj->config.mode ) {
        tcd->csr = 0x1 << HAL_LL_DMA_TCD_CSR_DREQ_BIT;
    }

    return HAL_LL_DMA_SUCCESS;
}

hal_ll_err_t hal_ll_dma_transfer_stop( hal_ll_dma_t *obj ) {
    dma_tcd_t * tcd = (dma_tcd_t*)( obj->handle + ( HAL_LL_DMA_TCD_BASE_OFFSET + ( HAL_LL_DMA_TCD_REG_MULTIPLIER * obj->stream )));

    // Stop request, once major loop count reaches 0 transfer is stoped.
    tcd->csr = 0x1 << HAL_LL_DMA_TCD_CSR_DREQ_BIT;

    return HAL_LL_DMA_SUCCESS;
}

static hal_ll_base_addr_t hal_ll_dma_get_stream_address( uint8_t module, uint8_t stream ) {
    return ((hal_ll_base_addr_t)dma_controller[module].stream_base);
}

static hal_ll_err_t hal_ll_dma_init_hw( hal_ll_dma_t *obj, dma_handle_t *dma, hal_ll_dma_config_t config ) {
    volatile uint32_t tmp = 0UL;

    // Check if user entered invalid data aka HAL_LL_DMA_DATA_ALIGN_BYTES_3
    if ( HAL_LL_DMA_DATA_ALIGN_BYTES_3 == config.data_align_source || HAL_LL_DMA_DATA_ALIGN_BYTES_3 == config.data_align_destination ) {
        return HAL_LL_DMA_ERROR;
    }

    dmamux_t * mux = (dmamux_t*)dmamux_controller[obj->module].dmamux_base + obj->stream;
    dma_tcd_t * tcd = (dma_tcd_t *)( obj->handle + ( HAL_LL_DMA_TCD_BASE_OFFSET + ( HAL_LL_DMA_TCD_REG_MULTIPLIER * obj->stream )));
    // TODO: chprio for now doesn't do anything. Left for future release.
    // Issue: All streams need to have unique priority set.
    // dma_chpro_t * chprio = (dma_chpro_t*)(obj->handle +(0x100 + ( obj->stream + 1)));

    // Disable the peripheral first.
    HAL_LL_DMA_MODULE_DISABLE(dma, obj);

    mux->chcfg = HAL_LL_DMAMUX_CLEAR_MASK;

    // Map DMA channel(source) to stream.
    mux->chcfg = HAL_LL_DMAMUX_ENABLE_MASK | obj->channel;

    // Clear TCD registers
    tcd->csr = HAL_LL_DMA_TCD_CLEAR_MASK_HALF_WORD;
    tcd->saddr = HAL_LL_DMA_TCD_CLEAR_MASK_WORD;
    tcd->daddr = HAL_LL_DMA_TCD_CLEAR_MASK_WORD;
    tcd->soff = HAL_LL_DMA_TCD_CLEAR_MASK_HALF_WORD;
    tcd->doff = HAL_LL_DMA_TCD_CLEAR_MASK_HALF_WORD;
    tcd->nbytes = HAL_LL_DMA_TCD_CLEAR_MASK_WORD;
    tcd->attr = HAL_LL_DMA_TCD_CLEAR_MASK_HALF_WORD;
    tcd->citer = HAL_LL_DMA_TCD_CLEAR_MASK_HALF_WORD;
    tcd->biter = HAL_LL_DMA_TCD_CLEAR_MASK_HALF_WORD;

    // TODO: this checks if channel can do m2m transfer
    if(!config.direction && config.channel<58)
        return HAL_LL_DMA_ERROR;

    // Set increment offset for source and destination adresses.
    tcd->soff |= hal_ll_dma_get_reg_value_src_inc(config.src_inc, config.data_align_source);
    tcd->doff |= hal_ll_dma_get_reg_value_dst_inc(config.dst_inc, config.data_align_destination);
    // Set source and destination size.
    tcd->attr |= hal_ll_dma_get_reg_value_source_size(config.data_align_source);
    tcd->attr |= hal_ll_dma_get_reg_value_destination_size(config.data_align_destination);

    // PRIORITY
    // TODO: For future release.
    // chprio->dchpri |= hal_ll_dma_get_reg_value_priority(config.priority);

    return HAL_LL_DMA_SUCCESS;
}
